refactor: sending invalid course ids back to user and update swagger
